# fishCenS

./: .gitignore  CMakeLists.txt  Depth.cpp  Depth.h  LowPassFilter.h  README.md  Temperature.cpp  Temperature.h  cvui.h  dehaze.cpp  dehaze.h  fishCenS.cpp  fishCenS.h  fishTracker.cpp  fishTracker.h  functimer.h  gui.cpp  gui.h  imex.cpp  installFishCenS.sh  libcamera_app.cpp  libcamera_app.h  libcamera_app_options.cpp  libcamera_app_options.h  main.cpp  videoRecord.cpp  videoRecord.h
include/: cvui.h
py/: DIR  fishML.py
src/: fishCenS.cpp  fishCenS.h  fishTracker.cpp  fishTracker.h  main.cpp  videoRecord.cpp  videoRecord.h
src/database/: sqlManager.cpp  sqlManager.h
src/gui/: cvui.h  gui.cpp  gui.h  imex.cpp  imex.h
src/libcamera/: lccv.cpp  lccv.hpp  libcamera_app.cpp
src/misc/: dehaze.cpp  dehaze.h  fcFuncs.cpp  fcFuncs.h  videoRecord.h
src/sensor/: Depth.cpp  Depth.h  Temperature.cpp  Temperature.h
src/tracking/: fishMLWrapper.cpp  fishMLWrapper.h  fishPipe.cpp  fishPipe.h  fishTracker.cpp  fishTracker.h
